--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -8,3 +8,59 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+.bluetile {
+  /* background-image: url("../images/bgtile.png") 0 0 no-repeat;
+  width: 100%;
+  height: 400px; */
+    text-align: center;
+    background-image: url("../images/bgtile.png");
+    background-position: center;
+    background-size: cover;
+    width: 100%;
+    height: 250px;
+    /* color: white; */
+    padding-top: 200px;
+    font-weight: 200;
+} 
+
+.stretch {
+  width: 100%;
+  height: 300px;
+}
+
+.phone {
+    float: left;
+    /* position: relative; */
+    left: 200px;
+    top: 150px;
+    margin-left: 10%;
+  }
+
+.instalogo {
+  float: left;
+  margin-left: 16%;
+
+    /* position:absolute; */
+    /* z-index:1;
+    bottom:4;
+    right:0; */
+}
+
+.frame {
+  background-repeat: no-repeat;
+  background-image: url("../images/frame.png");
+  position: relative;
+  margin-left: 50%;  
+  background-size: cover;
+
+}
+
+.text-position {
+    text-align: left;
+    color: white;
+    position: relative;
+    top: 50%;
+    color: #1c5380;
+
+}
